--- a/main-style.css
+++ b/main-style.css
@@ -5,33 +5,43 @@
     font-family: 'Times New Roman', Times, serif;
 }
 
+body{
+    background-color: rgba(205, 205, 205, 1)
+}
+
 .container{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     min-height: 100vh;
 }
 
 .about{
-    color: rgba(88, 24, 64, 1);
+    flex-grow: 0.5;
     width: 60%;
+}
+
+.about, .mission-statement{
+    padding: 12px;
+    color: rgba(88, 23, 46, 1);
     margin: 10px;
 }
 
-.about-description{
-    word-break: break-word;
+.mission-statement{
+    font-size: 20px;
 }
 
 .background{
     flex-grow: 0.5;
     min-height: 80vh;
-    background-image: url("https://specials-images.forbesimg.com/imageserve/64e8feec3b95a18f1bd8ae1f/0x0.jpeg");
+    background-image: url("main-background.jpeg");
     background-size: 100% 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
     margin: 50px;
+    margin-top: 0px;
     width: 100%;
 }
 
@@ -43,7 +53,7 @@
 }
 
 .maroon-stripe{
-    background-color: rgba(88, 24, 64, 1);
+    background-color: rgba(88, 23, 46, 1);
     left: -25px;
     bottom: -25px;
 }
@@ -62,9 +72,8 @@
     padding: 25px;
 }
 
-button{
+.container button{
     color: white;
-    background-color: rgba(88, 24, 64, 1);
     border-radius: 10px;
     width: 175px;
     height: 300px;
@@ -73,17 +82,75 @@ button{
     padding: 10px;
 }
 
-button:hover{
-    background-color: rgba(243, 189, 48, 1);
-    cursor: pointer;
-}
-
-.cs-major, .ac-major{
+.cs-major, .en-major{
     margin-bottom: 25px;
 }
 
-.bm-major, .is-major{
+.ac-major, .md-major{
     margin-top: 25px;
+}
+
+.cs-major, .md-major{
+    background-color: rgba(88, 23, 46, 0.65);
+}
+
+.ac-major, .en-major{
+    background-color: rgba(243, 189, 48, 0.65);
+}
+
+.navigation-bar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    list-style-type: none;
+    overflow: hidden;
+    background-color: white;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 20px;
+    border-radius: 5px;
+}
+
+.nav-link > a{
+    display: inline;
+    float: left;
+    text-align: center;
+    padding: 15px;
+    color: black;
+    text-decoration: none;
+    margin-right: 5px;
+}
+
+.nav-link > a:hover{
+    cursor: pointer;
+}
+
+.nav-title{
+    margin-left: 35px;
+}
+
+.nav-cs-major:hover, .nav-en-major:hover{
+    background-color: rgba(88, 23, 46, 0.65);
+}
+
+.nav-ac-major:hover, .nav-md-major:hover{
+    background-color: rgba(243, 189, 48, 0.65);
+}
+
+.share-button{
+    background-color: rgba(0, 0, 0, 0.8);
+    border: none;
+    border-radius: 5px;
+    color: white;
+    padding: 0px;
+    margin-right: 10px;
+    height: 30px;
+    width: 55px;
+}
+
+.share-button:hover{
+    cursor: pointer;
+    background-color: black;
 }
 
 @media (max-width: 1200px){
@@ -92,7 +159,7 @@ button:hover{
     }
 }
 
-@media (max-width: 850px){
+@media (max-width: 950px){
     .container{
         flex-direction: column;
     }
@@ -106,6 +173,14 @@ button:hover{
 @media (max-width: 600px){
     .majors{
         grid-template-columns: 1fr;
+    }
+
+    .en-major{
+        background-color: rgba(88, 23, 46, 0.65);
+    }
+
+    .md-major{
+        background-color: rgba(243, 189, 48, 0.65);
     }
 
     .majors > button{
