--- a/main-style.css
+++ b/main-style.css
@@ -137,7 +137,7 @@ body{
     background-color: rgba(243, 189, 48, 0.65);
 }
 
-.share-button{
+.share-button {
     background-color: rgba(0, 0, 0, 0.8);
     border: none;
     border-radius: 5px;
@@ -146,6 +146,7 @@ body{
     margin-right: 10px;
     height: 30px;
     width: 55px;
+    box-shadow: 5px 5px 7px rgba(0,0,0,0.25), inset 2px 2px 5px rgba(0,0,0,0.5), inset -3px -3px 5px rgba(0,0,0,0.5);
 }
 
 .share-button:hover{
