--- a/roadmap-style.css
+++ b/roadmap-style.css
@@ -5,7 +5,12 @@
     font-family: 'Times New Roman', Times, serif;
 }
 
+body{
+    background-color: rgba(205, 205, 205, 1)
+}
+
 .container{
+    margin-top: 20px;
     display: grid;
     grid-template-columns: 1fr;
     row-gap: 100px;
@@ -42,8 +47,7 @@
 }
 
 button{
-    color: white;
-    background-color: black;
+    color: black;
     border-radius: 5%;
     padding: 10px;
     border: none;
@@ -62,4 +66,60 @@ button:hover{
     right: 450px;
     width: 100px;
     height: 100px;
+}
+
+.navigation-bar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    list-style-type: none;
+    overflow: hidden;
+    background-color: white;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 20px;
+    border-radius: 5px;
+}
+
+.nav-link > a{
+    display: inline;
+    float: left;
+    text-align: center;
+    padding: 15px;
+    color: black;
+    text-decoration: none;
+    margin-right: 5px;
+}
+
+.nav-link > a:hover{
+    cursor: pointer;
+}
+
+.nav-title{
+    margin-left: 35px;
+}
+
+.nav-cs-major:hover, .nav-en-major:hover{
+    background-color: rgba(88, 23, 46, 0.65);
+}
+
+.nav-ac-major:hover, .nav-md-major:hover{
+    background-color: rgba(243, 189, 48, 0.65);
+}
+
+.share-button {
+    background-color: rgba(0, 0, 0, 0.8);
+    border: none;
+    border-radius: 5px;
+    color: white;
+    padding: 0px;
+    margin-right: 10px;
+    height: 30px;
+    width: 55px;
+    box-shadow: 5px 5px 7px rgba(0,0,0,0.25), inset 2px 2px 5px rgba(0,0,0,0.5), inset -3px -3px 5px rgba(0,0,0,0.5);
+}
+
+.share-button:hover{
+    cursor: pointer;
+    background-color: black;
 }
