--- a/roadmap-style.css
+++ b/roadmap-style.css
@@ -144,3 +144,22 @@ ul > li{
     cursor: pointer;
     background-color: black;
 }
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+}
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 300px;
+    background-color: rgb(255, 255, 255);
+    padding: 0px;
+    border-radius: 6px;
+    position: absolute;
+    z-index: 1;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+}
