--- a/roadmap-style.css
+++ b/roadmap-style.css
@@ -57,6 +57,9 @@ button{
     height: 80px;
     margin: 2px;
     transition: all 0.3s;
+    box-shadow: 5px 5px 7px rgba(0,0,0,0.25), 
+    inset 2px 2px 5px rgba(0,0,0,0.5), 
+    inset -3px -3px 5px rgba(0,0,0,0.5);
 }
 
 button:hover{
@@ -140,7 +143,9 @@ ul > li{
     margin-right: 10px;
     height: 30px;
     width: 55px;
-    box-shadow: 5px 5px 7px rgba(0,0,0,0.25), inset 2px 2px 5px rgba(0,0,0,0.5), inset -3px -3px 5px rgba(0,0,0,0.5);
+    box-shadow: 5px 5px 7px rgba(0,0,0,0.25), 
+    inset 2px 2px 5px rgba(0,0,0,0.5), 
+    inset -3px -3px 5px rgba(0,0,0,0.5);
 }
 
 .share-button:hover{
