--- a/main-style.css
+++ b/main-style.css
@@ -6,12 +6,17 @@
 }
 
 body{
+    background-image: url('BK.jpg');
+	background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     background-color: rgba(205, 205, 205, 1)
 }
 
 .container{
+    font-size: 40px;
     display: flex;
-    justify-content: space-between;
+    text-align: justify;
     align-items: center;
     min-height: 100vh;
 }
@@ -23,12 +28,12 @@ body{
 
 .about, .mission-statement{
     padding: 12px;
-    color: rgba(88, 23, 46, 1);
+    color: rgba(253, 243, 204, 0.789);
     margin: 10px;
 }
 
 .mission-statement{
-    font-size: 20px;
+    font-size: 30px;
 }
 
 .background{
@@ -73,6 +78,7 @@ body{
 }
 
 .container button{
+    overflow: auto;
     color: white;
     border-radius: 10px;
     width: 175px;
@@ -80,7 +86,27 @@ body{
     border: none;
     word-break: break-word;
     padding: 10px;
+    
 }
+
+::-webkit-scrollbar-track
+{
+    box-shadow: inset 0 0 15px rgba(0,0,0,0.5);
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar
+{
+    width: 5px;
+    
+}
+
+::-webkit-scrollbar-thumb
+{
+    background: #fff;
+    border-radius: 10px;
+}
+
 
 .cs-major, .en-major{
     margin-bottom: 25px;
@@ -111,6 +137,11 @@ body{
     border-radius: 5px;
 }
 
+.logo {
+    margin-left: -620px;
+    width: 50px;
+}
+
 .nav-link > a{
     display: inline;
     float: left;
@@ -126,7 +157,7 @@ body{
 }
 
 .nav-title{
-    margin-left: 35px;
+    margin-left: 75px;
 }
 
 .nav-cs-major:hover, .nav-en-major:hover{
