--- a/roadmap-style.css
+++ b/roadmap-style.css
@@ -108,6 +108,11 @@ ul > li{
     border-radius: 5px;
 }
 
+.logo {
+    margin-left: -620px;
+    width: 50px;
+}
+
 .nav-link > a{
     display: inline;
     float: left;
@@ -123,7 +128,7 @@ ul > li{
 }
 
 .nav-title{
-    margin-left: 35px;
+    margin-left: 75px;
 }
 
 .nav-cs-major:hover, .nav-en-major:hover{
@@ -160,8 +165,10 @@ ul > li{
 
 .tooltip .tooltiptext {
     visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.5s ease;
     width: 300px;
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(255, 255, 255, 0.834);
     padding: 0px;
     border-radius: 6px;
     position: absolute;
@@ -170,4 +177,5 @@ ul > li{
 
 .tooltip:hover .tooltiptext {
     visibility: visible;
+    opacity: 1;
 }
