--- a/roadmap-style.css
+++ b/roadmap-style.css
@@ -70,6 +70,11 @@ button:hover{
     transform: translateY(-5px);
 }
 
+button.green-shadow {
+    box-shadow: 5px 5px 7px rgba(0, 255, 0, 0.79), 
+                inset 2px 2px 5px rgba(0, 255, 0, 0.801);
+}
+
 .start-square{
     width: 100px;
     height: 100px;
